2007-03-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-03
	* based on EventFilter/ShmBuffer V00-03-03, which provides some
	crucial fixes!
	* initialize nRecoCells_ and nDqmCells_ to 1, 0 currently not
	allowed!
	* the sendData and sendDqm threads are now cleanly exited upon
	halt/stop.

2007-03-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-02
	* call startSendDataWorkLoop() and startSendDqmWorkLoop() in
	enabling()
	* replace TimerListener interface with a WorkLoop for monitoring
	* change monitoring variables according to what is done in BU

2007-03-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-01
	* fix to the handling of discards from the SM
	* tested with EventFilter/ShmBuffer V00-03-01

2007-03-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-06-00
	* based on EventFilter/ShmBuffer V00-03-00
	* based on EventFilter/Utilities V00-12-01
	* add SMProxy class to send (Event/DQM) data to the storage manager
	
2007-03-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-05-00
	* remove shmMode option: from now on, *only* FUShmReader is
	supported to consumer built events, the support of FUStdReader is
	stopped.
	* As a consequence, the FEDProvider interface is removed.
	* FUResourceTable::dropEvent() added.

2007-03-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-04-00
	* remove shared memory relevant classes from package, are
	transfered to EventFilter/ShmBuffer (V00-00-01)

2007-03-10  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-01
	* fix to discard-workloop in FUResourceTable, cleanly handle
	shutdown of connected processors now.

2007-03-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-03-00
	* compliant with FWCore reorganization of 140 series
	* based on evf::StateMachine available from EventFilter/Utilities
	V00-12-00
	
	